@@ -4,6 +4,7 @@
 #ifndef TAO_DCPS_DATALINKSETMAP_H
 #define TAO_DCPS_DATALINKSETMAP_H
 
+#include  "dds/DCPS/dcps_export.h"
 #include  "DataLinkSet_rch.h"
 #include  "TransportDefs.h"
 #include  "dds/DCPS/Definitions.h"
